src/components/_grid.scss
@use 'globals' as *;

div[data-testid='resources-grid'],
div.grid[class*='cols'] {
  overflow: hidden;
  margin-top: s(2.5);
  padding: s(3) s(3.5) !important;
  border-radius: var(--radius-md) !important;
  background: var(--cfy-card-container) !important;
}

div.grid[class*='cols']:is(
    :has([wire\:click^='navigateToProject']),
    :has([\@click^='$wire.navigateToProject']),
    [x-show^='filteredApplications'],
    [x-show^='filteredServices']
  ) {
  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;

  @include mq(sm) {
    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
  }
  @include mq(lg) {
    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
  }
  @include mq(xl) {
    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
  }
  @include mq(xxl) {
    grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
  }

  .box {
    height: 150px;

    &:has(> div + div) {
      display: flex;
      flex-direction: column-reverse;
      justify-content: space-between;
      align-items: center;
      // the box already has 2.5 and 3 padding so we need to add 2.5+1.5 and 3+2 padding
      padding: s(4) s(5) !important;
    }

    > div:only-child {
      display: flex;
      flex-direction: column-reverse;
      justify-content: space-between;
      align-items: center;
      margin: s(1.5) s(2);
    }

    div:has(> .box-title) {
      flex: none;
      justify-content: flex-start;
      width: 100%;
    }

    div:has(> .box-title) + div {
      justify-content: flex-end;
      width: 100%;
      margin-inline: 0;
    }

    a[href*='/edit'],
    a[href*='/new'] {
      padding: s(1.5);
      background-color: var(--color-coolgray-400);
      border-radius: var(--radius-xs);
      margin-inline: 0;

      & > * {
        display: none !important;
      }
    }

    a[href*='/new'] {
      @include icon-button('plus-bold', 'bold');
    }

    a[href*='/edit'] {
      @include icon-button('gear-fill', 'fill');
    }

    a[href*='/new']:hover,
    a[href*='/edit']:hover {
      opacity: 0.8;
    }
  }
}

@each $target in server, source, destination, security {
  .grid:has(a[href*='/#{$target}/']) {
    grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
  }
}

.grid,
[class*='grid-cols'] {
  gap: s(2.5) !important;
}

